@@ -4,11 +4,8 @@ import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.client.RestClient;
 
 import java.util.Collections;
 import java.util.List;
@@ -19,7 +16,7 @@ public class UserServiceClient {
 
     private static final Logger log = LoggerFactory.getLogger(UserServiceClient.class);
 
-    private final RestTemplate restTemplate;
+    private final RestClient restClient;
 
     @Value("${services.user-service.url}")
     private String userServiceUrl;
@@ -27,19 +24,16 @@ public class UserServiceClient {
     public List<String> getEmails(int page, int size) {
         try {
 
-            String url = userServiceUrl;
+            String[] emails = restClient.get()
+                    .uri(uriBuilder -> uriBuilder
+                            .path(userServiceUrl)
+                            .queryParam("page", page)
+                            .queryParam("size", size)
+                            .build())
+                    .retrieve()
+                    .body(String[].class);
 
-            ResponseEntity<List<String>> response =
-                    restTemplate.exchange(
-                            url,
-                            HttpMethod.GET,
-                            null,
-                            new ParameterizedTypeReference<>() {},
-                            page,
-                            size
-                    );
-
-            return response.getBody() == null ? Collections.emptyList() : response.getBody();
+            return emails == null ? Collections.emptyList() : List.of(emails);
 
         } catch (Exception ex) {
             log.error("Failed to fetch emails from user service: {}", ex.getMessage(), ex);
